--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnapBracket</title>
+    <title>Rauli Brackets</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <header>
+        <div class="logo">RAULI</div>
+        <div class="menu">
+            <div class="menu-item">project basket <span class="icon">U</span></div>
+            <div class="menu-item">logout <span class="icon">&#x21E5;</span></div>
+        </div>
+    </header>
+
+    <main>
+        <div class="center-message">
+            <h3>JOIN AND LEARN!</h3>
+            <p>We welcome you to RAULI WALL presentation to learn the basics of the WALL calculator</p>
+            <p>12.11.2024, 14.00 - 15.00 UTC+2</p>
+            <p>Length 30min - 1 hour.</p>
+            <p>Click for English presentation</p>
+        </div>
+
+        <div class="icons">
+            <div class="icon-item">
+                <div class="icon">&#x1F3E0;</div>
+                <span>PITCHED ROOF</span>
+            </div>
+            <div class="icon-item">
+                <div class="icon">&#x1F5D8;</div>
+                <span>WALL</span>
+            </div>
+            <div class="icon-item">
+                <div class="icon">&#x1F3E3;</div>
+                <span>FLATROOF</span>
+            </div>
+            <div class="icon-item">
+                <div class="icon">&#x1F9F1;</div>
+                <span>WHOLESALE ORDER</span>
+            </div>
+            <div class="icon-item">
+                <div class="icon">&#x1F5C1;</div>
+                <span>MATERIAL BANK</span>
+            </div>
+            <div class="icon-item">
+                <div class="icon">&#x1F464;</div>
+                <span>USER PROFILE</span>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>release-2024-11-08.1</p>
+    </footer>
+
     
 </body>
+
 </html>
