--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rauli Brackets</title>
+    <title>Snap Brackets</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header>
-        <div class="logo">RAULI</div>
+        <div class="logo">SnapBracket</div>
         <div class="menu">
             <div class="menu-item">project basket <span class="icon">U</span></div>
             <div class="menu-item">logout <span class="icon">&#x21E5;</span></div>
@@ -17,11 +17,7 @@
 
     <main>
         <div class="center-message">
-            <h3>JOIN AND LEARN!</h3>
-            <p>We welcome you to RAULI WALL presentation to learn the basics of the WALL calculator</p>
-            <p>12.11.2024, 14.00 - 15.00 UTC+2</p>
-            <p>Length 30min - 1 hour.</p>
-            <p>Click for English presentation</p>
+            <p>We welcome you to Snap Brackets presentation to learn the basics of the WALL calculator</p>
         </div>
 
         <div class="icons">
@@ -53,7 +49,7 @@
     </main>
 
     <footer>
-        <p>release-2024-11-08.1</p>
+        <p>release-2024-11-5</p>
     </footer>
 
     
